--- a/css/main.css
+++ b/css/main.css
@@ -297,8 +297,10 @@ h4 {
   #navbarNav {
     margin-top: 10px;
     text-align: center; }
+  .cards {
+    padding: 10px; }
   .card {
-    margin: 10px; }
+    margin: 12px; }
   .testimonials {
     border-block: 2px solid #21209C; }
   .vendedores {
