--- a/scss/_queryMobile.scss
+++ b/scss/_queryMobile.scss
@@ -24,8 +24,13 @@
         margin-top: 10px;
         text-align: center;
     }
+
+    .cards{
+        padding: 10px;
+    }
+
     .card {
-        margin: 10px;
+        margin: 12px;
     }
     .testimonials{
         border-block: 2px solid $color;}
