--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ h6 {
 .choose .choose_box {
   text-align: center; }
 
-.choose .choose_box span {
+.choose .choose_box {
   color: #FEFBF3;
   background-color: #171717;
   border-radius: 100px;
