--- a/scss/_eleginos.scss
+++ b/scss/_eleginos.scss
@@ -13,7 +13,7 @@
     text-align: center;
 }
 
-.choose .choose_box span {
+.choose .choose_box {
     color: $color2;
     background-color: $color1;
     border-radius: 100px;
