--- a/scss/_queryMobile.scss
+++ b/scss/_queryMobile.scss
@@ -28,8 +28,8 @@
     .card {
         margin: 12px;
     }
-    .testimonials{
-        border-block: 2px solid $color;}
+   /* .testimonials{
+        border-block: 2px solid $color;}*/
 
     .vendedores {
        width: 250px;
