--- a/scss/_testimonios.scss
+++ b/scss/_testimonios.scss
@@ -1,34 +1,51 @@
 @import "colores";
 
-#testimonios {
-    margin: 70px 0;
-}
-
 .testimonials{
-    margin-top: 20px;
-    margin-bottom: 50px;
-    margin: 20px;
+    width: 80%;
+    margin: auto;
+    padding-top: 100px;
     text-align: center;
 }
 
-.testimonials img {
-    height: 100px;
-    width: 100px;
+.testimonials-col{
+    flex-basis: 44%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+    background: rgba(196, 211, 223, 0.4);
+    padding: 25px;
+    cursor: pointer;
+    display: flex;
+}
+
+.testimonials-col img{
+    height: 70px;
+    margin-left: 5px;
+    margin-right: 30px;
     border-radius: 50%;
-    margin: 0 10px;
 }
 
-.usario {
-    display: inline-block;
-    font-size: 18px;
+.testimonials-col p{
+    padding: 0;
+    text-align: left;
 }
 
-.text {
-    margin: 20px;
-    color: $color1;
+.texto-testimonios {
+    padding: 0;
+    text-align: left;
+}
+
+.testimonials-col h6{
+    margin-top: 15px;
+    text-align: left;
     font-size: 20px;
-    text-align: center;
 }
+
+.testimonials-col .fas{
+    color: #f44336;
+}
+
+
 
 
 
