--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,11 @@ h6 {
 .testimonials-col .fas {
   color: #f44336; }
 
+@media (max-width: 700px) {
+  .testimonials-col img {
+    margin-left: 5px;
+    margin-right: 15px; } }
+
 h3 {
   color: #21209C;
   font-size: 20px;
@@ -311,8 +316,6 @@ h4 {
     text-align: center; }
   .card {
     margin: 12px; }
-  /* .testimonials{
-        border-block: 2px solid $color;}*/
   .vendedores {
     width: 250px;
     height: 150px;
