--- a/scss/_testimonios.scss
+++ b/scss/_testimonios.scss
@@ -45,7 +45,12 @@
     color: #f44336;
 }
 
-
+@media(max-width: 700px){
+    .testimonials-col img{
+        margin-left: 5px;
+        margin-right: 15px;
+    }
+}
 
 
 
