--- a/css/main.css
+++ b/css/main.css
@@ -206,7 +206,7 @@ h3 {
   animation-duration: 2.5s; }
 
 .hero-btn:hover {
-  border: 2px solid #171717;
+  border: 2px solid #21209C;
   background: #c4d3df;
   transition: 1s; }
 
@@ -216,8 +216,8 @@ h3 {
   color: #171717; }
 
 .red-btn:hover {
-  color: #171717;
-  background: #FEFBF3; }
+  color: #FEFBF3;
+  background: #171717; }
 
 .footer {
   width: 100%;
