--- a/css/main.css
+++ b/css/main.css
@@ -142,12 +142,10 @@ h6 {
   border-radius: 50%; }
 
 .testimonials-col p {
-  padding: 0;
-  text-align: left; }
+  padding: 0; }
 
 .texto-testimonios {
-  padding: 0;
-  text-align: left; }
+  padding: 0; }
 
 .testimonials-col h6 {
   margin-top: 15px;
@@ -156,11 +154,6 @@ h6 {
 
 .testimonials-col .fas {
   color: #f44336; }
-
-@media (max-width: 700px) {
-  .testimonials-col img {
-    margin-left: 5px;
-    margin-right: 15px; } }
 
 h3 {
   color: #21209C;
@@ -316,6 +309,8 @@ h4 {
     text-align: center; }
   .card {
     margin: 12px; }
+  .row {
+    flex-direction: column; }
   .vendedores {
     width: 250px;
     height: 150px;
