--- a/scss/_queryMobile.scss
+++ b/scss/_queryMobile.scss
@@ -29,6 +29,11 @@
         margin: 12px;
     }
 
+    .row{
+        flex-direction: column;
+    }
+
+
     .vendedores {
        width: 250px;
        height: 150px; 
@@ -37,6 +42,7 @@
        display: flex;
        margin: auto;
     }
+
     .contact-col input, .contact-col textarea{
         width: 200%;
     }
