--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -5,7 +5,7 @@
 @import "eleginos";
 @import "testimonios";
 @import "cards";
-@import "imagenes";
+@import "nosotros";
 @import "botones";
 @import "footer";
 @import "contactoFormulario";
