--- a/css/main.css
+++ b/css/main.css
@@ -176,10 +176,30 @@ h3 {
 .card:hover {
   box-shadow: 6px 6px 40px 6px #3f3f3f; }
 
-.vendedores {
-  padding: 10px;
-  display: flex;
-  margin: auto; }
+.about-us {
+  width: 80%;
+  margin: auto;
+  padding-top: 80px;
+  padding-bottom: 50px; }
+
+.about-col {
+  flex-basis: 48%;
+  padding: 30px 2px; }
+
+.about-col img {
+  width: 100%; }
+
+.about-col h1 {
+  padding-top: 0; }
+
+.about-col p {
+  padding: 15px 0 25px; }
+
+.course {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px; }
 
 .btn {
   color: #171717;
