cambio en media

--- a/scss/_queryMobile.scss
+++ b/scss/_queryMobile.scss
@@ -25,6 +25,11 @@
         text-align: center;
     }
 
+    .carousel {
+        margin-top: 10px;
+    }
+    
+
     .cards {
         margin-left: 70px;
     }
