--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,7 @@ h3 {
   font-weight: 550; }
 
 .row {
+  margin-top: 3%;
   display: flex;
   justify-content: space-between; }
 
@@ -332,8 +333,10 @@ h4 {
   #navbarNav {
     margin-top: 10px;
     text-align: center; }
+  .carousel {
+    margin-top: 10px; }
   .cards {
-    margin-left: 60px; }
+    margin-left: 70px; }
   .row {
     flex-direction: column; }
   .card {
@@ -346,7 +349,7 @@ h4 {
     display: flex;
     margin: auto; }
   .contact-col input, .contact-col textarea {
-    width: 200%; }
+    width: 100%; }
   .maps iframe {
     height: 210px;
     width: 260px; } }
