--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -6,5 +6,12 @@ $color2: #FEFBF3;
 
 $color4: #EFEFEF;
 
-$color5: rgb(63, 63, 63)
+$color5: rgb(63, 63, 63);
+
+$color6: rgba(63, 63, 63, 0.342);
+
+$color7: rgba(231, 222, 222, 0.897);
+
+$color9: #FFC069;
+
 
