--- a/scss/_eleginos.scss
+++ b/scss/_eleginos.scss
@@ -14,10 +14,10 @@
 }
 
 .choose .choose_box span{
-    color: $color2;
+    color: $color9;
     background-color: $color1;
     border-radius: 100px;
-    border: $color solid 4px;
+    border: $color9 solid 4px;
     padding: 20px 26px;
     display: inline-block;
     font-size: 20px;
