--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ a {
   position: sticky;
   top: 0;
   z-index: 5;
-  background-color: rgba(39, 28, 136, 0.425); }
+  background-color: rgba(63, 63, 63, 0.342); }
 
 #navbarNav ul li::after {
   content: "";
@@ -52,7 +52,7 @@ a {
   font-size: 20px; }
 
 h5 {
-  color: #171717;
+  color: #FFC069;
   margin: 10px;
   font-size: 30px;
   font-weight: 600; }
@@ -61,14 +61,14 @@ h5:hover {
   transform: translateY(-10px); }
 
 b {
-  color: #21209C;
+  color: #FFC069;
   font-weight: 600; }
 
 .carousel {
   margin-top: 10px; }
 
 h1 {
-  color: #21209C;
+  color: #FFC069;
   text-align: center;
   font-size: 35px;
   margin-top: 20px;
@@ -85,13 +85,13 @@ p {
   margin: 20px; }
 
 h2 {
-  color: #21209C;
+  color: #FFC069;
   text-align: center;
   font-size: 32px;
   margin-top: 30px; }
 
 h6 {
-  color: #21209C;
+  color: #FFC069;
   text-align: center;
   font-size: 35px;
   margin-top: 30px; }
@@ -107,10 +107,10 @@ h6 {
   text-align: center; }
 
 .choose .choose_box span {
-  color: #FEFBF3;
+  color: #FFC069;
   background-color: #171717;
   border-radius: 100px;
-  border: #21209C solid 4px;
+  border: #FFC069 solid 4px;
   padding: 20px 26px;
   display: inline-block;
   font-size: 20px;
@@ -156,10 +156,10 @@ h6 {
   font-size: 20px; }
 
 .testimonials-col .fas {
-  color: #f44336; }
+  color: #3f3f3f; }
 
 h3 {
-  color: #21209C;
+  color: #3f3f3f;
   font-size: 20px;
   text-align: center;
   font-weight: 550; }
@@ -177,7 +177,8 @@ h3 {
   margin-top: 20px; }
 
 .card {
-  margin: 10px; }
+  margin: 10px;
+  background-color: rgba(231, 222, 222, 0.897); }
 
 .card:hover {
   box-shadow: 6px 6px 40px 6px #3f3f3f; }
@@ -250,7 +251,7 @@ h4 {
 .footer h4 {
   margin-bottom: 5px;
   font-weight: 600;
-  color: #21209C; }
+  color: #FFC069; }
 
 .icons .fab {
   color: #171717;
@@ -336,7 +337,7 @@ h4 {
   .carousel {
     margin-top: 10px; }
   .cards {
-    margin-left: 70px; }
+    margin-left: 60px; }
   .row {
     flex-direction: column; }
   .card {
