--- a/scss/_titulos.scss
+++ b/scss/_titulos.scss
@@ -1,7 +1,7 @@
 @import "colores";
 
 h1{
-    color: $color;
+    color: $color9;
     text-align: center;
     font-size: 35px;
     margin-top: 20px;
@@ -21,14 +21,14 @@ p{
 }
 
 h2 {
-    color: $color;
+    color: $color9;
     text-align: center;
     font-size: 32px;
     margin-top: 30px;
 }
 
 h6 {
-    color: $color;
+    color: $color9;
     text-align: center;
     font-size: 35px;
     margin-top: 30px;
