--- a/scss/_contactoFormulario.scss
+++ b/scss/_contactoFormulario.scss
@@ -18,14 +18,14 @@
  
  .contact-col div .fas{
      font-size: 30px;
-     color: $color;
+     color: $color9;
      margin: 10px;
      margin-right: 30px;
  }
  
  .contact-col div .far{
      font-size: 30px;
-     color: $color;
+     color: $color9;
      margin: 10px;
      margin-right: 30px;
  }
