--- a/scss/_sizes.scss
+++ b/scss/_sizes.scss
@@ -1,3 +1,49 @@
 $sizes: 1px;
 
 $sizes1: 2px;
+
+$sizes2: 4px;
+
+$sizes3: 5px;
+
+$sizes4: 6px; 
+
+$sizes5: 10px;
+
+$sizes6: 12px;
+
+$sizes7: 13px;
+
+$sizes8: 15px;
+
+$sizes9: 16px;
+
+$sizes10: 17px;
+
+$sizes11: 18px;
+
+$sizes12: 20px;
+
+$sizes13: 25px;
+
+$sizes14: 26px;
+
+$sizes15: 27px;
+
+$sizes16: 28px;
+
+$sizes17: 30px;
+
+$sizes18: 34px;
+
+$sizes19: 35px;
+
+$sizes20: 40px;
+
+$sizes21: 50px;
+
+$sizes22: 70px;
+
+$sizes23: 80px;
+
+$sizes24: 100px;
