--- a/scss/_botones.scss
+++ b/scss/_botones.scss
@@ -1,4 +1,5 @@
 @import "colores";
+@import "sizes";
 
 .btn {
     color: $color1;
@@ -9,9 +10,9 @@
     display: inline-block;
     text-decoration: none;
     color: $color1;
-    border: 2px solid $color2;
-    padding: 12px 34px;
-    font-size: 15px;
+    border: $sizes1 solid $color2;
+    padding: $sizes6 $sizes18;
+    font-size: $sizes8;
     font-weight: 600;
     background: transparent;
     position: relative;
@@ -20,13 +21,13 @@
 }
 
 .hero-btn:hover{
-    border: 2px solid $color1;
+    border: $sizes1 solid $color1;
     background: #c4d3df;
     transition: 1s;
 }
 
 .red-btn{
-    border: 2px solid $color9;
+    border: $sizes1 solid $color9;
     background: transparent;
     color: $color1;
 }
