--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -1,8 +1,10 @@
 @import "colores";
+@import "sizes";
+
 
 h3{
     color: $color5;
-    font-size: 20px;
+    font-size: $sizes12;
     text-align: center;
     font-weight: 550;
 }
@@ -17,16 +19,16 @@ h3{
     width: 80%;
     margin: auto;
     text-align: center;
-    padding-top: 20px;
-    margin-top: 20px;
+    padding-top: $sizes12;
+    margin-top: $sizes12;
 }
 
 .card {
-    margin: 10px;
+    margin: $sizes5;
     background-color: $color7;
 }
 
 .card:hover{
-    box-shadow: 6px 6px 40px 6px $color5;
+    box-shadow: $sizes4 $sizes4 $sizes20 $sizes4 $color5;
 }
 
