--- a/scss/_contactoFormulario.scss
+++ b/scss/_contactoFormulario.scss
@@ -1,4 +1,5 @@
 @import "colores";
+@import "sizes";
 
 .contact-us{
     width: 80%;
@@ -7,41 +8,41 @@
  
  .contact-col{
      flex-basis: 48%;
-     margin-bottom: 30px;
+     margin-bottom: $sizes17;
  }
  
  .contact-col div{
      display: flex;
      align-items: center;
-     margin-bottom: 40px;
+     margin-bottom: $sizes20;
  }
  
  .contact-col div .fas{
-     font-size: 30px;
+     font-size: $sizes17;
      color: $color9;
-     margin: 10px;
-     margin-right: 30px;
+     margin: $sizes5;
+     margin-right: $sizes17;
  }
  
  .contact-col div .far{
-     font-size: 30px;
+     font-size: $sizes17;
      color: $color9;
-     margin: 10px;
-     margin-right: 30px;
+     margin: $sizes5;
+     margin-right: $sizes17;
  }
  
  .contact-col div h5{
-     font-size: 20px;
-     margin-bottom: 5px;
+     font-size: $sizes12;
+     margin-bottom: $sizes5;
      color: $color1;
      font-weight: 400;
  }
  
  .contact-col input, .contact-col textarea{
      width: 100%;
-     padding: 15px;
-     margin-bottom: 17px;
+     padding: $sizes8;
+     margin-bottom: $sizes10;
      outline: none;
-     border: 1px solid $color4;
+     border: $sizes solid $color4;
      box-sizing: border-box;
  }
