--- a/scss/_eleginos.scss
+++ b/scss/_eleginos.scss
@@ -1,11 +1,12 @@
 @import "colores";
+@import "sizes";
 
 .choose .titlepage h6 {
-    padding-bottom: 10px;
+    padding-bottom: $sizes5;
 }
 
 .choose .titlepage span {
-    font-size: 20px;
+    font-size: $sizes12;
     color: $color1;
 }
 
@@ -16,17 +17,17 @@
 .choose .choose_box span{
     color: $color9;
     background-color: $color1;
-    border-radius: 100px;
-    border: $color9 solid 4px;
-    padding: 20px 26px;
+    border-radius: $sizes24;
+    border: $color9 solid $sizes2;
+    padding: $sizes12 $sizes14;
     display: inline-block;
-    font-size: 20px;
-    margin-bottom: 20px;
+    font-size: $sizes12;
+    margin-bottom: $sizes12;
 }
 
 .choose .choose_box span {
     color: $color2;
-    font-size: 16px;
-    line-height: 28px;
-    margin-bottom: 20px;
+    font-size: $sizes9;
+    line-height: $sizes16;
+    margin-bottom: $sizes12;
 }
