--- a/scss/_mapa.scss
+++ b/scss/_mapa.scss
@@ -1,7 +1,10 @@
+@import "sizes";
+
+
 .maps{
     width: 70%;
     margin: auto;
-    padding: 80px 0;
+    padding: $sizes23 0;
 }
 
 .maps inframe{
