--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,4 +1,5 @@
 @import "colores";
+@import "sizes";
 
 a {
     text-decoration: none;
@@ -35,7 +36,7 @@ a {
 #navbarNav ul li::after{
     content:"";
     width: 0%;
-    height: 1px;
+    height: $sizes;
     background: $color1;
     display: block;
     margin: auto;
@@ -49,17 +50,17 @@ a {
 .navbar-nav li a {
     color: $color1 !important;
     font-weight: 400;
-    font-size: 25px;
+    font-size: $sizes13;
 }
 
 .navbar-toggler-icon{
-    font-size: 20px;
+    font-size: $sizes12;
 }
 
 h5 {
     color: $color9;
-    margin: 10px;
-    font-size: 30px;
+    margin: $sizes5;
+    font-size: $sizes17;
     font-weight: 600;
 }
 
@@ -73,7 +74,7 @@ b{
 }
 
 .carousel {
-    margin-top: 10px;
+    margin-top: $sizes5;
 }
 
 
