--- a/scss/_titulos.scss
+++ b/scss/_titulos.scss
@@ -1,10 +1,11 @@
 @import "colores";
+@import "sizes";
 
 h1{
     color: $color9;
     text-align: center;
-    font-size: 35px;
-    margin-top: 20px;
+    font-size: $sizes19;
+    margin-top: $sizes12;
     animation-duration: 10s;
     font-weight: 500;
 }
@@ -16,21 +17,21 @@ h1{
 p{
     color: $color1;
     text-align: center;
-    font-size: 20px;
-    margin: 20px;
+    font-size: $sizes12;
+    margin: $sizes12;
 }
 
 h2 {
     color: $color9;
     text-align: center;
-    font-size: 32px;
-    margin-top: 30px;
+    font-size: $sizes18;
+    margin-top: $sizes17;
 }
 
 h6 {
     color: $color9;
     text-align: center;
-    font-size: 35px;
-    margin-top: 30px;
+    font-size: $sizes19;
+    margin-top: $sizes17;
 }
 
