--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -64,9 +64,11 @@ h5 {
     font-weight: 600;
 }
 
-h5:hover {
-    transform: translateY(-10px);
-}
+h5:hover  {-webkit-transform:scale(1.2);transform:scale(1.2);}
+h5 {overflow:hidden;}
+
+h5:hover {-webkit-transform:scale(1.2);transform:scale(1.2);}
+h5{overflow:hidden;}
 
 b{
     color: $color9;
