--- a/scss/_querys.scss
+++ b/scss/_querys.scss
@@ -55,7 +55,32 @@
     }
 
     .maps iframe {
-     height: 230px;
+     height: 300px;
      width: 300px;
     }
 }
+
+@media only screen and (min-width:768px) and (max-width:1234px){
+    .contenedor{
+        display: grid;
+        grid-template-columns: 2fr;
+        grid-gap: 20px;
+        grid-template-areas:
+        "header"
+        "nav"
+        "section"
+        "img"
+        "footer";
+      }
+
+  
+      header{grid-area:header;}
+      nav{grid-area: nav;}
+      section{grid-area: section;}
+      footer{grid-area: footer;} 
+
+      .maps iframe {
+        height: 400px;
+        width: 800px;
+       }
+    }
