--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 
 body {
   background-image: linear-gradient(120deg, #fffbfb 0%, #ebedee 100%);
-  font-family: 'Prompt', sans-serif; }
+  font-family: 'Raleway', sans-serif; }
 
 a {
   text-decoration: none;
