--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -5,6 +5,6 @@
 
 body {
     background-image: linear-gradient(120deg, #fffbfb 0%, #ebedee 100%);
-    font-family: 'Prompt', sans-serif; 
+    font-family: 'Raleway', sans-serif;
 }
 
